docs: Update lvs